--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,22 +3,56 @@ title: "Introduction"
 description: "Enable voice for your website. Create, test, and deploy voice agents in minutes."
 ---
 
+<iframe
+  width="680"
+  height="385"
+  src="https://www.youtube.com/embed/z7H1oHrpE0I?si=7KnHIAG9o65EuIV6"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen={true}
+></iframe>
+
 # Welcome to Audentic
 
-Audentic empowers businesses to add natural voice interactions to their websites as easily as embedding a video. Our no-code platform enables you to create AI-powered voice agents that can handle everything from form filling to document navigation, transforming how users interact with your web content.
-
-## Key Features
-
-- **No-Code Integration**: Add voice AI to your website with a simple embed code
-- **Natural Conversations**: Powered by state-of-the-art AI models for human-like interactions
-- **Custom Voice Agents**: Design voice interactions tailored to your brand and use case
-- **Cross-Browser Compatible**: Works seamlessly across all major web browsers
-- **Enterprise-Ready**: Built with security, scalability, and reliability in mind
+Audentic enables businesses to add voice agents to their websites as easily as embedding a video, like the one above. Our no-code platform lets you bring the latest in voice and AI to your business. Let us handle the technical challenges, while you focus on building your brand.
 
 ## Why Voice AI?
 
 Voice is one of the most natural and efficient ways for humans to communicate. With recent breakthroughs in AI technology, we can now bring this natural interaction method to the web, making digital experiences more accessible and engaging than ever before.
 
+## Our Promise
+
+We obsess over creating the most natural and effective voice experience possible. Here are some features that make our agents stand out:
+
+<CardGroup cols={3}>
+  <Card title="Empathetic" icon="heart">
+    Create agents that understand customer emotions and embody your brand's
+    values for truly human-centric interactions.
+  </Card>
+  <Card title="Low Latency" icon="code-simple">
+    Our agents are designed to respond in real-time, ensuring a fast and
+    responsive experience for your customers.
+  </Card>
+  <Card title="Intelligent" icon="brain">
+    Interrupt anytime you want. Our agents are designed to be interruptible and
+    take turns like a human.
+  </Card>
+  <Card title="Built For You" icon="book">
+    Import your documents in any format to ensure your agents have comprehensive
+    knowledge of your business.
+  </Card>
+  <Card title="Truly Agentic" icon="robot">
+    Empower your agents with browser actions to enhance customer experience and
+    automate interactions.
+  </Card>
+  <Card title="Enterprise-Ready" icon="shield">
+    Our platform and agents are built with security, scalability, and
+    reliability at its core.
+  </Card>
+</CardGroup>
+
 ## Getting Started
 
-Ready to transform your website with voice AI? Check out our [Quick Start Guide](/quickstart) or explore our [use cases](/use-cases/form-filling) to see how Audentic can work for you.
+Ready to transform your website with voice AI? Check out our [Quick Start Guide](/quickstart) or explore one of the [use cases](/use-cases/form-filling) to see how Audentic can work for you.
