--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,26 +1,47 @@
 ---
 title: "Quickstart"
-description: "Get started with Audentic in minutes"
+description: "Create your first voice agent in minutes"
 ---
 
-# Quickstart Guide
+# Setup
 
-Follow these simple steps to start using Audentic in your project.
+Follow these simple steps to start building and using Audentic agents for your website.
 
-## Step 1: Sign Up
+<Steps>
+  <Step title="Sign in to Audentic">
+    Create your Audentic account at [audentic.io](https://audentic.io/sign-up).
+    Audentic currently supports SSO with Google or signing up with an email.
+  </Step>
+  <Step title="Create an Agent">
+    In the [Agent Builder](https://audentic.io/agents), click the "Create Agent"
+    button. In the dialog that appears, give your agent a name and click
+    "Create".
+  </Step>
+  <Step title="Configure your Agent">
+    Give your agent the intended task and personality. A task is a description of what you want your agent to do or assist with. 
+    Personality is a description of the agent's tone, style, and other characteristics.
+  </Step>
+  <Step title="Add Knowledge (Optional)">
+    Add knowledge to your agent by uploading documents (PDFs, images, etc.), adding web pages, or
+    just typing in text. This gives your agent additional context and information
+    to help it understand your website and better assist your customers. 
+  </Step>
+  <Step title="Settings (Optional)">
+    In this section, you can configure additional settings to customize your agent's behavior:
 
-Create your Audentic account at [audentic.io](https://audentic.io)
+    - **Use Advanced Model**: Enable to use a more powerful AI model for complex interactions. (Costs 4x more credits)
+    - **Auto-initiate conversation**: Allow your agent to proactively start conversations when a user engages with the agent.
+    - **Use browser tools**: Enable browser-based capabilities for advanced interactions such as navigation, search, clipboard, etc.
+    - **Form Processing Agent**: If the inteded use case is to fill out forms, enable this option.
 
-## Step 2: Create Your First Agent
+  </Step>
+  <Step title="Save and Test">
+    Click the "Save" button to save your agent. The agent should be deployed in under a minute. Once deployed, click the "Test" button to test your agent.
+  </Step>
+</Steps>
 
-1. Navigate to the Agent Builder
-2. Choose a template or start from scratch
-3. Configure your agent's capabilities
+## Example
 
-## Step 3: Integration
+Creating a simple Delta survey agent.
 
-Choose your preferred integration method and follow the setup instructions:
-
-- Wix
-- Shopify
-- API
+<img height="200" src="/assets/agent-creation.gif" />
