--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,7 +24,7 @@ Voice is one of the most natural and efficient ways for humans to communicate. W
 
 ## Our Promise
 
-We obsess over creating the most natural and effective voice experience possible. Here are some features that make our agents stand out:
+We obsess over creating the most natural and effective voice experience possible. Our voice agents are **multilingual** out of the box, and can change pace and tone based on the situation. Here are some features that make our agents stand out:
 
 <CardGroup cols={3}>
   <Card title="Empathetic" icon="heart">
