--- a/use-cases/form-filling.mdx
+++ b/use-cases/form-filling.mdx
@@ -1,15 +1,117 @@
 ---
-title: "Form Filling Automation"
+title: "Form Filling"
 description: "Automate form filling processes with AI"
 ---
 
-# Form Filling Automation
+# Enable conversational form filling
 
-Discover how to use Audentic to automate form filling processes and data entry tasks.
+Learn how to create AI agents that assist users in filling out forms efficiently while maintaining accuracy and compliance.
 
-## Key Benefits
+## Best Practices for Form Filling Agents
 
-- Reduce manual data entry
-- Minimize errors
-- Increase processing speed
-- Handle complex forms
+### Task Description Configuration
+
+<CardGroup cols={1}>
+  <Card title="Clear Agent Instructions" icon="list-check">
+    Example task description: "You are a helpful assistant guiding users through
+    form completion. Collect information step-by-step, explain each field
+    clearly, and verify information before submission. Use form tools to fill
+    out the form as and when the user provides the necessary information."
+  </Card>
+</CardGroup>
+
+### Essential Setup
+
+<CardGroup cols={2}>
+  <Card title="Form Processing Mode" icon="toggle-on">
+    Enable the Form Processing Agent setting to: - Access form field detection -
+    Enable step-by-step field completion - Validate input formats - Handle
+    complex form logic
+  </Card>
+  <Card title="Browser Tools" icon="browser">
+    Enable browser tools to: - Automatically fill form fields - Navigate between
+    form sections - Handle dropdowns and selections - Submit completed forms
+  </Card>
+</CardGroup>
+
+### Knowledge Base Requirements
+
+<CardGroup cols={2}>
+  <Card title="Form-Specific Information" icon="clipboard">
+    Include entries for: - Field descriptions and requirements - Accepted input
+    formats - Common error messages - Required documentation
+  </Card>
+  <Card title="Validation Rules" icon="shield-check">
+    Document: - Input format requirements - Required vs optional fields -
+    Character limits - Acceptable value ranges
+  </Card>
+</CardGroup>
+
+### Agent Personality
+
+<CardGroup cols={2}>
+  <Card title="Professional Support" icon="user-tie">
+    Configure your agent to be: - Patient and thorough - Clear and precise -
+    Supportive during errors - Professional yet approachable
+  </Card>
+  <Card title="Error Handling" icon="circle-exclamation">
+    Train your agent to: - Explain errors clearly - Provide correction guidance
+    - Maintain user confidence - Offer alternative solutions
+  </Card>
+</CardGroup>
+
+## Recommended Settings
+
+<CardGroup cols={1}>
+  <Card title="Optimal Configuration" icon="sliders">
+    For form-filling agents, we recommend: - ✅ Use Advanced Model: For complex
+    form logic - ✅ Form Processing Agent: Essential for form interactions - ✅
+    Use browser tools: Required for field manipulation - ❌ Auto-initiate
+    conversation: Let users start when ready
+  </Card>
+</CardGroup>
+
+## Implementation Tips
+
+<CardGroup cols={2}>
+  <Card title="Progressive Data Collection" icon="layer-group">
+    - Break long forms into logical sections - Validate each section before
+    proceeding - Save progress when possible - Provide clear progress indicators
+  </Card>
+  <Card title="Error Prevention" icon="shield">
+    - Validate data in real-time - Provide format examples - Offer
+    field-specific guidance - Confirm sensitive information
+  </Card>
+  <Card title="User Experience" icon="user-check">
+    - Explain why information is needed - Offer help with complex fields -
+    Provide estimated completion time - Allow easy corrections
+  </Card>
+  <Card title="Privacy & Security" icon="lock">
+    - Remind users about sensitive data - Clear temporary data - Offer secure
+    submission options - Comply with data protection rules
+  </Card>
+</CardGroup>
+
+## Testing Checklist
+
+Before deploying your form-filling agent:
+
+1. Test with various form types and complexities
+2. Verify error handling and recovery
+3. Check field validation accuracy
+4. Confirm proper data formatting
+5. Test across different browsers
+6. Verify form submission success
+7. Review privacy compliance
+
+## Common Use Cases
+
+- Account registration forms
+- Contact information collection
+- Application submissions
+- Survey completion
+- Document requests
+- Customer onboarding
+- Service enrollment
+
+Remember to regularly update your agent's knowledge base with new form variations and common user challenges to maintain optimal performance.
