--- a/roadmap/model-context-protocol.mdx
+++ b/roadmap/model-context-protocol.mdx
@@ -1,19 +1,19 @@
 ---
 title: "Model Context Protocol"
-description: "Creating a standardized way for Audentic agents to interact with sources and applications"
+description: "Creating a standardized way for Audentic agents to interact with data sources and applications"
 ---
 
-# Model Context Protocol
+<Note>
+  These features are currently in development and will be released in upcoming
+  versions. Stay tuned for updates!
+</Note>
 
-Learn about our upcoming Model Context Protocol and how it will enhance AI model interactions.
+# What is Model Context Protocol?
 
-## Overview
+The Model Context Protocol (MCP) is an open protocol that enables seamless
+integration between LLM applications and external data sources and tools. Whether
+you're building an AI-powered IDE, enhancing a chat interface, or creating
+custom AI workflows, MCP provides a standardized way to connect LLMs with the
+context they need.
 
-The Model Context Protocol is a standardized way to manage and maintain context in AI conversations and operations.
-
-## Features in Development
-
-- Enhanced context management
-- Improved memory handling
-- Cross-model communication
-- Context persistence
+For more details, refer to [modelcontextprotocol.io](https://modelcontextprotocol.io/).
