fixing video sizing

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -4,8 +4,11 @@ description: "Enable voice for your website. Create, test, and deploy voice agen
 ---
 
 <iframe
-  width="680"
-  height="385"
+  width="100%"
+  style={{
+    aspectRatio: "16/9",
+    maxWidth: "680px",
+  }}
   src="https://www.youtube.com/embed/z7H1oHrpE0I?si=7KnHIAG9o65EuIV6"
   title="YouTube video player"
   frameborder="0"
